main: fix footer information text contrast

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -193,6 +193,10 @@ body {
 	a:hover {
 		text-decoration: underline;
 	}
+
+	p {
+		color: #fdfdff;
+	}
 }
 
 .footer-social-networks {
@@ -394,6 +398,10 @@ body {
 
 		a:hover {
 			text-decoration: underline;
+		}
+
+		p {
+			color: #fdfdff;
 		}
 	}
 
